--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.0.6",
+		"@types/node": "^24.0.10",
 		"typescript": "~5.7.2",
-		"vite": "^6.3.1"
+		"vite": "^6.3.1",
+		"vite-plugin-sitemap": "^0.8.2"
 	},
 	"dependencies": {
 		"pdf-lib": "^1.17.1",
